--- a/7zip.csproj
+++ b/7zip.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <None Remove="Pages\ExtractOperationPage.xaml" />
     <None Remove="Pages\MainPage.xaml" />
+    <None Remove="Windows\NewCompressionWindow.xaml" />
     <None Remove="Windows\OperationWindow.xaml" />
   </ItemGroup>
 
@@ -54,6 +55,9 @@
     <None Update="Assets\7z.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Page Update="Windows\NewCompressionWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\ExtractOperationPage.xaml">
