--- a/7zip.csproj
+++ b/7zip.csproj
@@ -32,14 +32,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Labs.WinUI.SettingsControls" Version="0.0.18" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.0.230907" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.230913002" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.25936-preview" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SevenZip" Version="19.0.0" />
     <PackageReference Include="Squid-Box.SevenZipSharp" Version="1.6.1.23" />
-    <PackageReference Include="WinUIEx" Version="2.3.0" />
+    <PackageReference Include="WinUIEx" Version="2.3.1" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
