--- a/src/7zip/7Zip.App.csproj
+++ b/src/7zip/7Zip.App.csproj
@@ -16,10 +16,10 @@
     <Content Remove="Assets\7z.dll" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="Pages\ExtractOperationPage.xaml" />
-    <None Remove="Pages\MainPage.xaml" />
-    <None Remove="Windows\NewCompressionWindow.xaml" />
-    <None Remove="Windows\OperationWindow.xaml" />
+    <None Remove="Views\Pages\ExtractOperationPage.xaml" />
+    <None Remove="Views\Pages\MainPage.xaml" />
+    <None Remove="Views\Windows\NewCompressionWindow.xaml" />
+    <None Remove="Views\Windows\OperationWindow.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,24 +55,9 @@
     <None Update="Assets\7z.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Page Update="Windows\NewCompressionWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
-    <Page Update="Pages\ExtractOperationPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Update="Pages\MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Update="Windows\OperationWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Folder Include="Views\" />
   </ItemGroup>
 
   <!-- 
