我在7Zip.APP里写了个供菜单调用的方法

--- a/src/7Zip.Core/7Zip.Core.csproj
+++ b/src/7Zip.Core/7Zip.Core.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>_7Zip.Core</RootNamespace>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
