--- a/src/7zip.App.Controls/7Zip.App.Controls.csproj
+++ b/src/7zip.App.Controls/7Zip.App.Controls.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>_7zip.App.Controls</RootNamespace>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
