--- a/src/ZipShellExt/ZipShellExt.vcxproj
+++ b/src/ZipShellExt/ZipShellExt.vcxproj
@@ -184,6 +184,11 @@
   <ItemGroup>
     <Midl Include="BaseExplorerCommand.idl" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\7zip\7Zip.App.csproj">
+      <Project>{b3761d1b-d58a-4a93-903e-730df1489850}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.Windows.CppWinRT.2.0.230706.1\build\native\Microsoft.Windows.CppWinRT.targets" Condition="Exists('..\packages\Microsoft.Windows.CppWinRT.2.0.230706.1\build\native\Microsoft.Windows.CppWinRT.targets')" />
