--- a/src/7zip/7Zip.App.csproj
+++ b/src/7zip/7Zip.App.csproj
@@ -103,8 +103,8 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\7zip.App.Controls\7Zip.App.Controls.csproj" />
     <ProjectReference Include="..\7Zip.Core\7Zip.Core.csproj" />
+    <ProjectReference Include="..\7zip.ShellExtension_cs\7zip.ShellExtension_cs.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Page Update="Styles\Themes.Dark.xaml">
